--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,61 @@
   <title>Мишка — интернет-магазин игрушек</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>
 
+<body class="page">
+  <header class="page-header">
+    <nav class="main-nav main-nav--no-js">
+      <a class="main-nav__logo logo">
+        <picture>
+          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишка">
+        </picture>
+      </a>
+
+      <button class="main-nav__toggle main-nav__toggle--off" type="button" aria-label="Меню"></button>
+
+      <ul class="main-nav__site-list site-navigation">
+        <li class="site-navigation__item">
+          <a class="site-navigation__link" href="catalog.html">Каталог товаров</a>
+        </li>
+        <li class="site-navigation__item">
+          <a class="site-navigation__link" href="form.html">Вязание на заказ</a>
+        </li>
+      </ul>
+
+      <ul class="main-nav__user-list user-navigation">
+        <li class="user-navigation__item">
+          <a class="user-navigation__link" href="#">Поиск по сайту</a>
+        </li>
+        <li class="user-navigation__item">
+          <a class="user-navigation__link" href="#">Корзина: пока пуста</a>
+        </li>
+      </ul>
+
+      <ul class="main-nav__stock-list stock-navigation">
+        <li class="stock-navigation__item">
+          <a class="stock-navigation__link" href="#">Новые поступления</a>
+        </li>
+        <li class="stock-navigation__item">
+          <a class="stock-navigation__link" href="#">Распродажа</a>
+        </li>
+      </ul>
+
+      <p class="main-nav__text">Бесплатная доставка по России</p>
+    </nav>
+  </header>
+
+  <main class="page-main"></main>
+
+  <footer class="page-footer"></footer>
+
+  <div class="modal-form"></div>
+
+  <script src="js/svg4everybody.min.js"></script>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/polyfill.min.js"></script>
   <script src="js/index.min.js"></script>
 </body>
+
 </html>
