Разметка контента страницы каталога.

--- a/src/form.html
+++ b/src/form.html
@@ -58,7 +58,7 @@
   <footer class="page-footer">
     <div class="content-wrapper">
       <a class="page-footer__logo footer-logo" aria-label="Мишка">
-        <svg class="footer-logo__image" width="102" height="34" alt="Логотип сайта Мишка">
+        <svg class="footer-logo__image" width="102" height="34">
           <use xlink:href="img/symbols.svg#logo-footer"></use>
         </svg>
       </a>
@@ -78,7 +78,7 @@
       <p class="page-footer__copyright">
         <span class="page-footer__copyright-text">Разработано</span>
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
-          <svg class="page-footer__copyright-image" width="27" height="34" alt="Логотип HTML Academy">
+          <svg class="page-footer__copyright-image" width="27" height="34">
             <use xlink:href="img/symbols.svg#logo-htmlacademy"></use>
           </svg>
         </a>
