--- a/src/catalog.html
+++ b/src/catalog.html
@@ -53,12 +53,129 @@
     </nav>
   </header>
 
-  <main class="page-main"></main>
+  <main class="page-main">
+    <h1 class="page-main__title">Каталог товаров</h1>
+
+    <div class="content-wrapper">
+      <section class="page-main__catalog">
+        <h2 class="visually-hidden">Каталог товаров</h2>
+
+        <article class="card-product">
+          <a class="card-product__link card-product__link--image" href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/photo-hare-desktop@1x.webp 1x, img/content/photo-hare-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/content/photo-hare-tablet@1x.webp 1x, img/content/photo-hare-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/content/photo-hare-mobile@1x.webp 1x, img/content/photo-hare-mobile@2x.webp 2x">
+              <source media="(min-width: 1150px)" srcset="img/content/photo-hare-desktop@1x.jpg 1x, img/content/photo-hare-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/content/photo-hare-tablet@1x.jpg 1x, img/content/photo-hare-tablet@2x.jpg 2x">
+              <img class="card-product__image" src="img/content/photo-hare-mobile@1x.jpg" srcset="img/content/photo-hare-mobile@2x.jpg 2x"
+                alt="Зайчик-попрыгайчик">
+            </picture>
+          </a>
+
+          <div class="card-product__description-wrapper">
+            <h3 class="card-product__title">
+              <a class="card-product__link" href="#">Зайчик-попрыгайчик</a>
+            </h3>
+
+            <p class="card-product__description">Рост 30 см, вес 200 г</p>
+
+            <div class="card-product__price-wrapper">
+              <p class="card-product__price">1 200 руб.</p>
+              <a class="card-product__button" href="#" aria-label="Добавить в корзину">
+                <svg class="card-product__image" width="20" height="19">
+                  <use xlink:href="img/symbols.svg#icon-cart"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </article>
+
+        <article class="card-product">
+          <a class="card-product__link card-product__link--image" href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/photo-bowl-desktop@1x.webp 1x, img/content/photo-bowl-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/content/photo-bowl-tablet@1x.webp 1x, img/content/photo-bowl-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/content/photo-bowl-mobile@1x.webp 1x, img/content/photo-bowl-mobile@2x.webp 2x">
+              <source media="(min-width: 1150px)" srcset="img/content/photo-bowl-desktop@1x.jpg 1x, img/content/photo-bowl-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/content/photo-bowl-tablet@1x.jpg 1x, img/content/photo-bowl-tablet@2x.jpg 2x">
+              <img class="card-product__image" src="img/content/photo-bowl-mobile@1x.jpg" srcset="img/content/photo-bowl-mobile@2x.jpg 2x"
+                alt="Корзинка для белья">
+            </picture>
+          </a>
+
+          <div class="card-product__description-wrapper">
+            <h3 class="card-product__title">
+              <a class="card-product__link" href="#">Корзинка для белья</a>
+            </h3>
+
+            <p class="card-product__description">Диаметр 15 см, высота 10 см</p>
+
+            <div class="card-product__price-wrapper">
+              <p class="card-product__price">690 руб.</p>
+              <a class="card-product__button" href="#" aria-label="Добавить в корзину">
+                <svg class="card-product__image" width="20" height="19">
+                  <use xlink:href="img/symbols.svg#icon-cart"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </article>
+
+        <article class="card-product">
+          <a class="card-product__link card-product__link--image" href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/photo-toys-desktop@1x.webp 1x, img/content/photo-toys-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/content/photo-toys-tablet@1x.webp 1x, img/content/photo-toys-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/content/photo-toys-mobile@1x.webp 1x, img/content/photo-toys-mobile@2x.webp 2x">
+              <source media="(min-width: 1150px)" srcset="img/content/photo-toys-desktop@1x.jpg 1x, img/content/photo-toys-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/content/photo-toys-tablet@1x.jpg 1x, img/content/photo-toys-tablet@2x.jpg 2x">
+              <img class="card-product__image" src="img/content/photo-toys-mobile@1x.jpg" srcset="img/content/photo-toys-mobile@2x.jpg 2x"
+                alt="Большая корзинка для игрушек">
+            </picture>
+          </a>
+
+          <div class="card-product__description-wrapper">
+            <h3 class="card-product__title">
+              <a class="card-product__link" href="#">Большая корзинка для игрушек</a>
+            </h3>
+
+            <p class="card-product__description">Диаметр 30 см, высота 30 см</p>
+
+            <div class="card-product__price-wrapper">
+              <p class="card-product__price">1 500 руб.</p>
+              <a class="card-product__button" href="#" aria-label="Добавить в корзину">
+                <svg class="card-product__image" width="20" height="19">
+                  <use xlink:href="img/symbols.svg#icon-cart"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <section class="page-main__video video">
+        <h2 class="video__title">Процесс производства</h2>
+
+        <video class="video__content" width="260" height="150">
+          <source src="video/video.ogv" type="video/ogg">
+          <source src="video/video.mp4" type="video/mp4">
+          <source src="video/video.webm" type="video/webm">
+        </video>
+
+        <button class="video__play" type="button" aria-label="Воспроизвести"></button>
+
+        <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+
+        <a class="video__button button" href="#">Сделать заказ</a>
+      </section>
+    </div>
+  </main>
 
   <footer class="page-footer">
     <div class="content-wrapper">
       <a class="page-footer__logo footer-logo" aria-label="Мишка">
-        <svg class="footer-logo__image" width="102" height="34" alt="Логотип сайта Мишка">
+        <svg class="footer-logo__image" width="102" height="34">
           <use xlink:href="img/symbols.svg#logo-footer"></use>
         </svg>
       </a>
@@ -78,7 +195,7 @@
       <p class="page-footer__copyright">
         <span class="page-footer__copyright-text">Разработано</span>
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
-          <svg class="page-footer__copyright-image" width="27" height="34" alt="Логотип HTML Academy">
+          <svg class="page-footer__copyright-image" width="27" height="34">
             <use xlink:href="img/symbols.svg#logo-htmlacademy"></use>
           </svg>
         </a>
@@ -86,7 +203,24 @@
     </div>
   </footer>
 
-  <div class="modal-form"></div>
+  <form class="form-cart page__form-cart" action="https://echo.htmlacademy.ru" method="POST">
+    <h2 class="form-cart__title">Добавить в корзину</h2>
+
+    <fieldset class="form-cart__fieldset">
+      <legend class="form-cart__legend">Выберите размер:</legend>
+
+      <input class="form-cart__radio visually-hidden" type="radio" id="size-s" name="size" value="1" checked>
+      <label for="size-s" class="form-cart__label">S</label>
+      <input class="form-cart__radio visually-hidden" type="radio" id="size-m" name="size" value="2">
+      <label for="size-m" class="form-cart__label">M</label>
+      <input class="form-cart__radio visually-hidden" type="radio" id="size-l" name="size" value="3">
+      <label for="size-l" class="form-cart__label">L</label>
+    </fieldset>
+
+    <button class="form-cart__button button button--green" type="submit">Добавить</button>
+  </form>
+
+  <div class="modal-overlay"></div>
 
   <script src="js/svg4everybody.min.js"></script>
   <script src="js/picturefill.min.js"></script>
