Разметка контента страницы формы.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -58,7 +58,7 @@
 
     <div class="content-wrapper">
       <section class="page-main__catalog">
-        <h2 class="visually-hidden">Каталог товаров</h2>
+        <h2 class="visually-hidden">Наша продукция</h2>
 
         <article class="card-product">
           <a class="card-product__link card-product__link--image" href="#">
