--- a/src/index.html
+++ b/src/index.html
@@ -158,9 +158,9 @@
 
           <dl class="contacts__list">
             <dt class="contacts__list-term">e-mail:</dt>
-            <dd class="ontacts__list-description">info@mimimishkashop.ru</dd>
+            <dd class="contacts__list-description">info@mimimishkashop.ru</dd>
             <dt class="contacts__list-term">адрес:</dt>
-            <dd class="ontacts__list-description">г. Санкт-Петербург,<br>
+            <dd class="contacts__list-description">г. Санкт-Петербург,<br>
               ул. Большая Конюшенная,<br>
               д. 19/8, офис 101</dd>
           </dl>
@@ -173,7 +173,7 @@
             <source type="image/webp" srcset="img/content/map-mobile@1x.webp 1x, img/content/map-mobile@2x.webp 2x">
             <source media="(min-width: 1150px)" srcset="img/content/map-desktop@1x.jpg 1x, img/content/map-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/content/map-tablet@1x.jpg 1x, img/content/map-tablet@2x.jpg 2x">
-            <img class="week-goods__image" src="img/content/map-mobile@1x.jpg" srcset="img/content/map-mobile@2x.jpg 2x"
+            <img class="map__image" src="img/content/map-mobile@1x.jpg" srcset="img/content/map-mobile@2x.jpg 2x"
               alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
           </picture>
 
