--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,17 @@
 <body class="page">
   <header class="page-header">
     <nav class="main-nav main-nav--no-js">
-      <a class="main-nav__logo header-logo" aria-label="Мишка">
-        <picture>
-          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-          <img class="header-logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип сайта Мишка">
-        </picture>
-      </a>
+      <div class="main-nav__logo-wrapper">
+        <a class="main-nav__logo header-logo" aria-label="Мишка">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="header-logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип сайта Мишка">
+          </picture>
+        </a>
 
-      <button class="main-nav__toggle main-nav__toggle--off" type="button" aria-label="Меню"></button>
+        <button class="main-nav__toggle main-nav__toggle--off" type="button" aria-label="Меню"></button>
+      </div>
 
       <ul class="main-nav__site-list site-navigation">
         <li class="site-navigation__item">
@@ -33,10 +35,20 @@
 
       <ul class="main-nav__user-list user-navigation">
         <li class="user-navigation__item">
-          <a class="user-navigation__link" href="#">Поиск по сайту</a>
+          <a class="user-navigation__link" href="#">
+            <svg class="user-navigation__link-image" width="18" height="18">
+              <use xlink:href="img/symbols.svg#icon-search"></use>
+            </svg>
+            Поиск по сайту
+          </a>
         </li>
         <li class="user-navigation__item">
-          <a class="user-navigation__link" href="#">Корзина: пока пуста</a>
+          <a class="user-navigation__link" href="#">
+            <svg class="user-navigation__link-image" width="20" height="19">
+              <use xlink:href="img/symbols.svg#icon-cart"></use>
+            </svg>
+            Корзина: пока пуста
+          </a>
         </li>
       </ul>
 
@@ -166,21 +178,20 @@
           </dl>
         </div>
 
-        <div class="contacts__map map">
+        <!-- <div class="contacts__map map">
           <picture>
             <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/map-desktop@1x.webp 1x, img/content/map-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="img/content/map-tablet@1x.webp 1x, img/content/map-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/content/map-mobile@1x.webp 1x, img/content/map-mobile@2x.webp 2x">
             <source media="(min-width: 1150px)" srcset="img/content/map-desktop@1x.jpg 1x, img/content/map-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/content/map-tablet@1x.jpg 1x, img/content/map-tablet@2x.jpg 2x">
-            <img class="map__image" src="img/content/map-mobile@1x.jpg" srcset="img/content/map-mobile@2x.jpg 2x"
-              alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+            <img class="map__image" src="img/content/map-mobile@1x.jpg" srcset="img/content/map-mobile@2x.jpg 2x" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
           </picture>
 
           <div class="map__marker"></div>
 
           <div class="map__interactive" id="map"></div>
-        </div>
+        </div> -->
 
         <a class="contacts__button button" href="#">Напишите нам</a>
       </section>
