Стилизация мобильной версии главной страницы.

--- a/src/form.html
+++ b/src/form.html
@@ -187,19 +187,31 @@
 
       <ul class="social-links">
         <li class="social-links__item">
-          <a class="social-links__link" href="https://www.instagram.com" aria-label="Instagram"></a>
+          <a class="social-links__link" href="https://www.instagram.com" aria-label="Instagram">
+            <svg class="social-links__image" width="22" height="21">
+              <use xlink:href="img/symbols.svg#icon-insta"></use>
+            </svg>
+          </a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="https://www.facebook.com" aria-label="Facebook"></a>
+          <a class="social-links__link" href="https://www.facebook.com" aria-label="Facebook">
+            <svg class="social-links__image" width="15" height="28">
+              <use xlink:href="img/symbols.svg#icon-fb"></use>
+            </svg>
+          </a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="https://twitter.com" aria-label="Twitter"></a>
+          <a class="social-links__link" href="https://twitter.com" aria-label="Twitter">
+            <svg class="social-links__image" width="23" height="20">
+              <use xlink:href="img/symbols.svg#icon-twitter"></use>
+            </svg>
+          </a>
         </li>
       </ul>
 
       <p class="page-footer__copyright">
-        <span class="page-footer__copyright-text">Разработано</span>
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
+          <span class="page-footer__copyright-text">Разработано</span>
           <svg class="page-footer__copyright-image" width="27" height="34">
             <use xlink:href="img/symbols.svg#logo-htmlacademy"></use>
           </svg>
