--- a/src/index.html
+++ b/src/index.html
@@ -71,131 +71,136 @@
     <section class="promo">
       <h2 class="visually-hidden">Основные разделы сайта</h2>
 
-      <div class="content-wrapper">
-        <p class="promo__slogan">Милые штуки ручной работы для дома</p>
+      <p class="promo__slogan">Милые штуки ручной работы&nbsp;для дома</p>
 
-        <ul class="promo__list promo-list">
-          <li class="promo-list__item">
-            <a class="promo-list__link" href="#">Предметы интерьера</a>
-          </li>
-          <li class="promo-list__item">
-            <a class="promo-list__link" href="#">Детские игрушки</a>
-          </li>
-        </ul>
+      <ul class="promo__list promo-list">
+        <li class="promo-list__item">
+          <a class="promo-list__link promo-list__link--interior" href="#">
+            <span class="promo-list__text">Предметы интерьера</span>
+          </a>
+        </li>
+        <li class="promo-list__item">
+          <a class="promo-list__link promo-list__link--toy" href="#">
+            <span class="promo-list__text">Детские игрушки</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="week-goods content-wrapper">
+      <h2 class="week-goods__title section-title">Вязаные корзинки</h2>
+
+      <p class="week-goods__mark">Товар недели</p>
+
+      <div class="week-goods__content-wrapper">
+        <p class="week-goods__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и
+          трех размерах.</p>
+
+        <table class="week-goods__table table-specification">
+          <tbody>
+            <tr class="table-specification__row">
+              <td class="table-specification__cell">Цвет:</td>
+              <td class="table-specification__cell">«Тиффани»/серый</td>
+            </tr>
+            <tr class="table-specification__row">
+              <td class="table-specification__cell">Диаметр:</td>
+              <td class="table-specification__cell">25 см</td>
+            </tr>
+            <tr class="table-specification__row">
+              <td class="table-specification__cell">Высота:</td>
+              <td class="table-specification__cell">15 см</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <div class="week-goods__image-wrapper">
+          <picture>
+            <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/triple-set-desktop@1x.webp 1x, img/content/triple-set-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/content/triple-set-tablet@1x.webp 1x, img/content/triple-set-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/content/triple-set-mobile@1x.webp 1x, img/content/triple-set-mobile@2x.webp 2x">
+            <source media="(min-width: 1150px)" srcset="img/content/triple-set-desktop@1x.jpg 1x, img/content/triple-set-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/content/triple-set-tablet@1x.jpg 1x, img/content/triple-set-tablet@2x.jpg 2x">
+            <img class="week-goods__image" src="img/content/triple-set-mobile@1x.jpg" srcset="img/content/triple-set-mobile@2x.jpg 2x"
+              alt="Вязаная корзинка «Тиффани»">
+          </picture>
+        </div>
+
+        <p class="week-goods__price">Цена: 990 руб.</p>
+
+        <a class="week-goods__button button" href="order.html">Заказать</a>
       </div>
     </section>
 
-    <div class="content-wrapper">
-      <section class="week-goods">
-        <h2 class="week-goods__title section-title">Вязаные корзинки</h2>
+    <section class="advantages content-wrapper">
+      <h2 class="advantages__title section-title">Коротко о нас:</h2>
 
-        <p class="week-goods__mark">Товар недели</p>
+      <ul class="advantages__list advantages-list">
+        <li class="advantages__list-item advantages__list-item--ecology">Экологически чистые&nbsp;материалы</li>
+        <li class="advantages__list-item advantages__list-item--style">Скандинавский стиль по&nbsp;российской цене</li>
+        <li class="advantages__list-item advantages__list-item--likes">Увеличивает лайки на&nbsp;фотографиях</li>
+        <li class="advantages__list-item advantages__list-item--handmade">Связано вручную с
+          любовью&nbsp;и&nbsp;умилением</li>
+        <li class="advantages__list-item advantages__list-item--support">Поддержка отечественного производителя</li>
+        <li class="advantages__list-item advantages__list-item--gift">Поставляется в подарочной&nbsp;упаковке</li>
+      </ul>
+    </section>
 
-        <div class="week-goods__wrapper">
-          <p class="week-goods__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и
-            трех размерах.</p>
+    <section class="reviews content-wrapper">
+      <h2 class="reviews__title section-title">Отзывы</h2>
 
-          <table class="week-goods__table table-specification">
-            <tbody>
-              <tr class="table-specification__row">
-                <td class="table-specification__cell">Цвет:</td>
-                <td class="table-specification__cell">«Тиффани»/серый</td>
-              </tr>
-              <tr class="table-specification__row">
-                <td class="table-specification__cell">Диаметр:</td>
-                <td class="table-specification__cell">25 см</td>
-              </tr>
-              <tr class="table-specification__row">
-                <td class="table-specification__cell">Высота:</td>
-                <td class="table-specification__cell">15 см</td>
-              </tr>
-            </tbody>
-          </table>
+      <blockquote class="reviews__content">
+        <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества
+          лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
+          фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+        <cite class="reviews__author">
+          <span class="reviews__author-name">Анастасия Красильникова</span>
+          <span class="reviews__author-email">@misssssiskras</span>
+        </cite>
+      </blockquote>
 
-          <div class="week-goods__image-wrapper">
-            <picture>
-              <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/triple-set-desktop@1x.webp 1x, img/content/triple-set-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="img/content/triple-set-tablet@1x.webp 1x, img/content/triple-set-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/content/triple-set-mobile@1x.webp 1x, img/content/triple-set-mobile@2x.webp 2x">
-              <source media="(min-width: 1150px)" srcset="img/content/triple-set-desktop@1x.jpg 1x, img/content/triple-set-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/content/triple-set-tablet@1x.jpg 1x, img/content/triple-set-tablet@2x.jpg 2x">
-              <img class="week-goods__image" src="img/content/triple-set-mobile@1x.jpg" srcset="img/content/triple-set-mobile@2x.jpg 2x"
-                alt="Вязаная корзинка «Тиффани»">
-            </picture>
-          </div>
+      <div class="reviews__navigation">
+        <button class="reviews__nav-button reviews__nav-button--prev" type="button" aria-label="Назад"></button>
+        <button class="reviews__nav-button reviews__nav-button--next" type="button" aria-label="Вперёд"></button>
+      </div>
 
-          <p class="week-goods__price">Цена: 990 руб.</p>
+      <a class="reviews__button button" href="#">Написать</a>
+    </section>
 
-          <a class="week-goods__button button" href="order.html">Заказать</a>
-        </div>
-      </section>
+    <section class="contacts">
+      <div class="contacts__content-wrapper content-wrapper">
+        <h2 class="contacts__title">Контакты</h2>
 
-      <section class="advantages">
-        <h2 class="advantages__title section-title">Коротко о нас:</h2>
+        <dl class="contacts__list">
+          <dt class="contacts__list-term">e-mail:</dt>
+          <dd class="contacts__list-description"><a class="mail-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></dd>
+          <dt class="contacts__list-term">адрес:</dt>
+          <dd class="contacts__list-description">
+            г. Санкт-Петербург,<br>
+            ул. Большая<br>
+            Конюшенная,<br>
+            д. 19/8, офис 101</dd>
+        </dl>
+      </div>
 
-        <ul class="advantages__list advantages-list">
-          <li class="advantages__list-item advantages__list-item--ecology">Экологически чистые материалы</li>
-          <li class="advantages__list-item advantages__list-item--style">Скандинавский стиль по российской цене</li>
-          <li class="advantages__list-item advantages__list-item--likes">Увеличивает лайки на фотографиях</li>
-          <li class="advantages__list-item advantages__list-item--handmade">Связано вручную с любовью и умилением</li>
-          <li class="advantages__list-item advantages__list-item--support">Поддержка отечественного производителя</li>
-          <li class="advantages__list-item advantages__list-item--gift">Поставляется в подарочной упаковке</li>
-        </ul>
-      </section>
+      <div class="contacts__map map">
+        <picture>
+          <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/map-desktop@1x.webp 1x, img/content/map-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/content/map-tablet@1x.webp 1x, img/content/map-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="img/content/map-mobile@1x.webp 1x, img/content/map-mobile@2x.webp 2x">
+          <source media="(min-width: 1150px)" srcset="img/content/map-desktop@1x.jpg 1x, img/content/map-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="img/content/map-tablet@1x.jpg 1x, img/content/map-tablet@2x.jpg 2x">
+          <img class="map__image" src="img/content/map-mobile@1x.jpg" srcset="img/content/map-mobile@2x.jpg 2x" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+        </picture>
 
-      <section class="reviews">
-        <h2 class="reviews__title section-title">Отзывы</h2>
+        <div class="map__marker"></div>
 
-        <blockquote class="reviews__content">
-          <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества
-            лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
-            фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-          <cite class="reviews__author">
-            <span class="reviews__author-name">Анастасия Красильникова</span>
-            <span class="reviews__author-email">@misssssiskras</span>
-          </cite>
-        </blockquote>
+        <div class="map__interactive" id="map"></div>
+      </div>
 
-        <div class="reviews__navigation">
-          <button class="reviews__nav-button reviews__nav-button--prev" type="button" aria-label="Назад"></button>
-          <button class="reviews__nav-button reviews__nav-button--next" type="button" aria-label="Вперёд"></button>
-        </div>
-
-        <a class="reviews__button button" href="#">Написать</a>
-      </section>
-
-      <section class="contacts">
-        <div class="contacts__content-wrapper">
-          <h2 class="contacts__title">Контакты</h2>
-
-          <dl class="contacts__list">
-            <dt class="contacts__list-term">e-mail:</dt>
-            <dd class="contacts__list-description">info@mimimishkashop.ru</dd>
-            <dt class="contacts__list-term">адрес:</dt>
-            <dd class="contacts__list-description">г. Санкт-Петербург,<br>
-              ул. Большая Конюшенная,<br>
-              д. 19/8, офис 101</dd>
-          </dl>
-        </div>
-
-        <!-- <div class="contacts__map map">
-          <picture>
-            <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/map-desktop@1x.webp 1x, img/content/map-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="img/content/map-tablet@1x.webp 1x, img/content/map-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/content/map-mobile@1x.webp 1x, img/content/map-mobile@2x.webp 2x">
-            <source media="(min-width: 1150px)" srcset="img/content/map-desktop@1x.jpg 1x, img/content/map-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/content/map-tablet@1x.jpg 1x, img/content/map-tablet@2x.jpg 2x">
-            <img class="map__image" src="img/content/map-mobile@1x.jpg" srcset="img/content/map-mobile@2x.jpg 2x" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-          </picture>
-
-          <div class="map__marker"></div>
-
-          <div class="map__interactive" id="map"></div>
-        </div> -->
-
+      <div class="content-wrapper">
         <a class="contacts__button button" href="#">Напишите нам</a>
-      </section>
-    </div>
+      </div>
+    </section>
   </main>
 
   <footer class="page-footer">
@@ -208,19 +213,31 @@
 
       <ul class="social-links">
         <li class="social-links__item">
-          <a class="social-links__link" href="https://www.instagram.com" aria-label="Instagram"></a>
+          <a class="social-links__link" href="https://www.instagram.com" aria-label="Instagram">
+            <svg class="social-links__image" width="22" height="21">
+              <use xlink:href="img/symbols.svg#icon-insta"></use>
+            </svg>
+          </a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="https://www.facebook.com" aria-label="Facebook"></a>
+          <a class="social-links__link" href="https://www.facebook.com" aria-label="Facebook">
+            <svg class="social-links__image" width="15" height="28">
+              <use xlink:href="img/symbols.svg#icon-fb"></use>
+            </svg>
+          </a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="https://twitter.com" aria-label="Twitter"></a>
+          <a class="social-links__link" href="https://twitter.com" aria-label="Twitter">
+            <svg class="social-links__image" width="23" height="20">
+              <use xlink:href="img/symbols.svg#icon-twitter"></use>
+            </svg>
+          </a>
         </li>
       </ul>
 
       <p class="page-footer__copyright">
-        <span class="page-footer__copyright-text">Разработано</span>
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
+          <span class="page-footer__copyright-text">Разработано</span>
           <svg class="page-footer__copyright-image" width="27" height="34">
             <use xlink:href="img/symbols.svg#logo-htmlacademy"></use>
           </svg>
@@ -229,24 +246,26 @@
     </div>
   </footer>
 
-  <form class="form-cart page__form-cart" action="https://echo.htmlacademy.ru" method="POST">
-    <h2 class="form-cart__title">Добавить в корзину</h2>
+  <div class="modal-overlay page__overlay">
+    <form class="form-cart modal-overlay__form-cart" action="https://echo.htmlacademy.ru" method="POST">
+      <h2 class="form-cart__title">Добавить в корзину</h2>
 
-    <fieldset class="form-cart__fieldset">
-      <legend class="form-cart__legend">Выберите размер:</legend>
+      <fieldset class="form-cart__fieldset">
+        <legend class="form-cart__legend">Выберите размер:</legend>
 
-      <input class="form-cart__radio visually-hidden" type="radio" id="size-s" name="size" value="1" checked>
-      <label for="size-s" class="form-cart__label">S</label>
-      <input class="form-cart__radio visually-hidden" type="radio" id="size-m" name="size" value="2">
-      <label for="size-m" class="form-cart__label">M</label>
-      <input class="form-cart__radio visually-hidden" type="radio" id="size-l" name="size" value="3">
-      <label for="size-l" class="form-cart__label">L</label>
-    </fieldset>
+        <div class="form-cart__input-wrapper">
+          <input class="form-cart__radio visually-hidden" type="radio" id="size-s" name="size" value="1" checked>
+          <label class="form-cart__label" for="size-s">S</label>
+          <input class="form-cart__radio visually-hidden" type="radio" id="size-m" name="size" value="2">
+          <label class="form-cart__label" for="size-m">M</label>
+          <input class="form-cart__radio visually-hidden" type="radio" id="size-l" name="size" value="3">
+          <label class="form-cart__label" for="size-l">L</label>
+        </div>
+      </fieldset>
 
-    <button class="form-cart__button button button--green" type="submit">Добавить</button>
-  </form>
-
-  <div class="modal-overlay"></div>
+      <button class="form-cart__button button button--green" type="submit">Добавить</button>
+    </form>
+  </div>
 
   <script src="js/svg4everybody.min.js"></script>
   <script src="js/picturefill.min.js"></script>
