Стилизация мобильной версии страницы формы.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -181,7 +181,7 @@
           <button class="video__play-button" type="button" aria-label="Воспроизвести"></button>
         </div>
 
-        <div class="video__block-wrapper">
+        <div class="video__description-wrapper">
           <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том,
             как появляются наши товары.</p>
           <a class="video__button button" href="#">Сделать заказ</a>
