Стилизация планшетной версии страницы Ñкаталога.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -151,7 +151,7 @@
 
           <div class="card-product__description-wrapper">
             <h3 class="card-product__title">
-              <a class="card-product__link" href="#">Большая корзинка для игрушек</a>
+              <a class="card-product__link" href="#">Большая корзинка для&nbsp;игрушек</a>
             </h3>
 
             <p class="card-product__description">Диаметр 30 см, высота 30 см</p>
