--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <button class="main-nav__toggle main-nav__toggle--off" type="button" aria-label="Меню"></button>
       </div>
 
-      <ul class="main-nav__site-list site-navigation">
+      <ul class="main-nav__site-list site-navigation site-navigation--index">
         <li class="site-navigation__item">
           <a class="site-navigation__link" href="catalog.html">Каталог товаров</a>
         </li>
@@ -61,7 +61,7 @@
         </li>
       </ul>
 
-      <p class="main-nav__text">Бесплатная доставка по России</p>
+      <p class="main-nav__text main-nav__text--index">Бесплатная доставка по России</p>
     </nav>
   </header>
 
