Стилизация десктопной версии главной страницы.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -26,10 +26,10 @@
 
       <ul class="main-nav__site-list site-navigation">
         <li class="site-navigation__item">
-          <a class="site-navigation__link">Каталог товаров</a>
+          <a class="site-navigation__link site-navigation__link">Каталог товаров</a>
         </li>
         <li class="site-navigation__item">
-          <a class="site-navigation__link" href="form.html">Вязание на заказ</a>
+          <a class="site-navigation__link site-navigation__link" href="form.html">Вязание на заказ</a>
         </li>
       </ul>
 
@@ -54,10 +54,10 @@
 
       <ul class="main-nav__stock-list stock-navigation">
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link" href="#">Новые поступления</a>
+          <a class="stock-navigation__link stock-navigation__link--new" href="#">Новые поступления</a>
         </li>
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link" href="#">Распродажа</a>
+          <a class="stock-navigation__link stock-navigation__link--sell" href="#">Распродажа</a>
         </li>
       </ul>
 
