--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,10 @@
 
       <ul class="main-nav__site-list site-navigation">
         <li class="site-navigation__item">
-          <a class="site-navigation__link" href="catalog.html">Каталог товаров</a>
+          <a class="site-navigation__link site-navigation__link" href="catalog.html">Каталог товаров</a>
         </li>
         <li class="site-navigation__item">
-          <a class="site-navigation__link" href="form.html">Вязание на заказ</a>
+          <a class="site-navigation__link site-navigation__link" href="form.html">Вязание на заказ</a>
         </li>
       </ul>
 
@@ -54,10 +54,10 @@
 
       <ul class="main-nav__stock-list stock-navigation">
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link" href="#">Новые поступления</a>
+          <a class="stock-navigation__link stock-navigation__link--new" href="#">Новые поступления</a>
         </li>
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link" href="#">Распродажа</a>
+          <a class="stock-navigation__link stock-navigation__link--sell" href="#">Распродажа</a>
         </li>
       </ul>
 
@@ -71,20 +71,22 @@
     <section class="promo">
       <h2 class="visually-hidden">Основные разделы сайта</h2>
 
-      <p class="promo__slogan">Милые штуки ручной работы&nbsp;для дома</p>
+      <div class="promo__content-wrapper">
+        <p class="promo__slogan">Милые штуки ручной работы&nbsp;для дома</p>
 
-      <ul class="promo__list promo-list">
-        <li class="promo-list__item">
-          <a class="promo-list__link promo-list__link--interior" href="#">
-            <span class="promo-list__text">Предметы интерьера</span>
-          </a>
-        </li>
-        <li class="promo-list__item">
-          <a class="promo-list__link promo-list__link--toy" href="#">
-            <span class="promo-list__text">Детские игрушки</span>
-          </a>
-        </li>
-      </ul>
+        <ul class="promo__list promo-list">
+          <li class="promo-list__item">
+            <a class="promo-list__link promo-list__link--interior" href="#">
+              <span class="promo-list__text">Предметы интерьера</span>
+            </a>
+          </li>
+          <li class="promo-list__item">
+            <a class="promo-list__link promo-list__link--toy" href="#">
+              <span class="promo-list__text">Детские игрушки</span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="week-goods content-wrapper">
@@ -151,11 +153,11 @@
 
       <blockquote class="reviews__content">
         <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества
-          лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
+          лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и&nbsp;мои
           фотографии сразу стали более стильными, а также набирают больше лайков!</p>
         <cite class="reviews__author">
           <span class="reviews__author-name">Анастасия Красильникова</span>
-          <span class="reviews__author-email">@misssssiskras</span>
+          <a class="reviews__author-email" href="mailto:misssssiskras@gmail.com">@misssssiskras</a>
         </cite>
       </blockquote>
 
@@ -197,7 +199,7 @@
         <div class="map__interactive" id="map"></div>
       </div>
 
-      <div class="content-wrapper">
+      <div class="contacts__button-wrapper content-wrapper">
         <a class="contacts__button button" href="#">Напишите нам</a>
       </div>
     </section>
