СтилизацÑия десктопноÑй версии страницы каталога.ÐÐ

--- a/src/form.html
+++ b/src/form.html
@@ -26,10 +26,10 @@
 
       <ul class="main-nav__site-list site-navigation">
         <li class="site-navigation__item">
-          <a class="site-navigation__link site-navigation__link" href="catalog.html">Каталог товаров</a>
+          <a class="site-navigation__link" href="catalog.html">Каталог товаров</a>
         </li>
         <li class="site-navigation__item">
-          <a class="site-navigation__link site-navigation__link">Вязание на заказ</a>
+          <a class="site-navigation__link">Вязание на заказ</a>
         </li>
       </ul>
 
@@ -54,10 +54,10 @@
 
       <ul class="main-nav__stock-list stock-navigation">
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link stock-navigation__link--new" href="#">Новые поступления</a>
+          <a class="stock-navigation__link" href="#">Новые поступления</a>
         </li>
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link stock-navigation__link--sell" href="#">Распродажа</a>
+          <a class="stock-navigation__link" href="#">Распродажа</a>
         </li>
       </ul>
 
@@ -67,7 +67,9 @@
 
   <main class="page-main">
     <header class="page-main__header">
-      <h1 class="page-main__title">Вязание на заказ</h1>
+      <div class="content-wrapper">
+        <h1 class="page-main__title">Вязание на заказ</h1>
+      </div>
     </header>
 
     <p class="page-main__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы
