--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,10 @@
 
       <ul class="main-nav__site-list site-navigation">
         <li class="site-navigation__item">
-          <a class="site-navigation__link site-navigation__link" href="catalog.html">Каталог товаров</a>
+          <a class="site-navigation__link" href="catalog.html">Каталог товаров</a>
         </li>
         <li class="site-navigation__item">
-          <a class="site-navigation__link site-navigation__link" href="form.html">Вязание на заказ</a>
+          <a class="site-navigation__link" href="form.html">Вязание на заказ</a>
         </li>
       </ul>
 
@@ -54,10 +54,10 @@
 
       <ul class="main-nav__stock-list stock-navigation">
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link stock-navigation__link--new" href="#">Новые поступления</a>
+          <a class="stock-navigation__link" href="#">Новые поступления</a>
         </li>
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link stock-navigation__link--sell" href="#">Распродажа</a>
+          <a class="stock-navigation__link" href="#">Распродажа</a>
         </li>
       </ul>
 
@@ -69,10 +69,8 @@
     <h1 class="visually-hidden">Мишка — интернет-магазин игрушек ручной работы</h1>
 
     <section class="promo">
-      <h2 class="visually-hidden">Основные разделы сайта</h2>
-
-      <div class="promo__content-wrapper">
-        <p class="promo__slogan">Милые штуки ручной работы&nbsp;для дома</p>
+      <div class="promo__content-wrapper content-wrapper">
+        <h2 class="promo__title">Милые штуки ручной работы&nbsp;для дома</h2>
 
         <ul class="promo__list promo-list">
           <li class="promo-list__item">
