--- a/src/catalog.html
+++ b/src/catalog.html
@@ -26,10 +26,10 @@
 
       <ul class="main-nav__site-list site-navigation">
         <li class="site-navigation__item">
-          <a class="site-navigation__link site-navigation__link">Каталог товаров</a>
+          <a class="site-navigation__link">Каталог товаров</a>
         </li>
         <li class="site-navigation__item">
-          <a class="site-navigation__link site-navigation__link" href="form.html">Вязание на заказ</a>
+          <a class="site-navigation__link" href="form.html">Вязание на заказ</a>
         </li>
       </ul>
 
@@ -54,10 +54,10 @@
 
       <ul class="main-nav__stock-list stock-navigation">
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link stock-navigation__link--new" href="#">Новые поступления</a>
+          <a class="stock-navigation__link" href="#">Новые поступления</a>
         </li>
         <li class="stock-navigation__item">
-          <a class="stock-navigation__link stock-navigation__link--sell" href="#">Распродажа</a>
+          <a class="stock-navigation__link" href="#">Распродажа</a>
         </li>
       </ul>
 
@@ -67,7 +67,9 @@
 
   <main class="page-main">
     <header class="page-main__header">
-      <h1 class="page-main__title">Каталог товаров</h1>
+      <div class="content-wrapper">
+        <h1 class="page-main__title">Каталог товаров</h1>
+      </div>
     </header>
 
     <div class="content-wrapper">
@@ -172,7 +174,7 @@
         <h2 class="video__title">Процесс производства</h2>
 
         <div class="video__content-wrapper">
-          <video class="video__content" width="258" height="150">
+          <video class="video__content">
             <source src="video/video.ogv" type="video/ogg">
             <source src="video/video.mp4" type="video/mp4">
             <source src="video/video.webm" type="video/webm">
