Стилизация десктопной версии страницы формы.

--- a/src/form.html
+++ b/src/form.html
@@ -72,10 +72,10 @@
       </div>
     </header>
 
-    <p class="page-main__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы
-      свяжемся с вами, чтобы уточнить детали.</p>
-
     <form class="form-feedback" action="https://echo.htmlacademy.ru" method="post">
+      <p class="form-feedback__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните
+        простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+
       <div class="form-feedback__block-wrapper">
         <fieldset class="form-feedback__fieldset form-feedback__fieldset--type content-wrapper">
           <legend class="form-feedback__legend">
