Исправление ошибок кроссбраузерности. Добавлены свойства для ширины экрана 425px.

--- a/src/form.html
+++ b/src/form.html
@@ -82,7 +82,7 @@
             <span class="form-feedback__legend-text">Тип</span>
           </legend>
 
-          <div class="form-feedback__content-wrapper">
+          <div class="form-feedback__content-wrapper form-feedback__content-wrapper--type">
             <p class="form-feedback__input-wrapper form-feedback__input-wrapper--type">
               <input class="form-feedback__radio visually-hidden" type="radio" id="interior" name="type" value="1"
                 checked>
