--- a/src/catalog.html
+++ b/src/catalog.html
@@ -73,9 +73,7 @@
     </header>
 
     <div class="content-wrapper">
-      <section class="catalog">
-        <h2 class="visually-hidden">Наша продукция</h2>
-
+      <div class="catalog">
         <article class="card-product catalog__card-product">
           <a class="card-product__link-image" href="#">
             <picture>
@@ -168,7 +166,7 @@
             </div>
           </div>
         </article>
-      </section>
+      </div>
 
       <section class="page-main__video video">
         <h2 class="video__title">Процесс производства</h2>
