Интерактивная карта. Модальное окно.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -21,7 +21,7 @@
           </picture>
         </a>
 
-        <button class="main-nav__toggle main-nav__toggle--off" type="button" aria-label="Меню"></button>
+        <button class="main-nav__toggle main-nav__toggle--off" id="toggle-button" type="button" aria-label="Меню"></button>
       </div>
 
       <ul class="main-nav__site-list site-navigation">
@@ -172,11 +172,7 @@
         <h2 class="video__title">Процесс производства</h2>
 
         <div class="video__content-wrapper">
-          <video class="video__content">
-            <source src="video/video.ogv" type="video/ogg">
-            <source src="video/video.mp4" type="video/mp4">
-            <source src="video/video.webm" type="video/webm">
-          </video>
+          <video class="video__content"></video>
 
           <button class="video__play-button" type="button" aria-label="Воспроизвести"></button>
         </div>
@@ -192,7 +188,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__content-wrapper content-wrapper">
-      <a class="page-footer__logo footer-logo" aria-label="Мишка">
+      <a class="page-footer__logo footer-logo" href="index.html" aria-label="Мишка">
         <svg class="footer-logo__image" width="102" height="34">
           <use xlink:href="img/symbols.svg#logo-footer"></use>
         </svg>
