--- a/src/form.html
+++ b/src/form.html
@@ -21,7 +21,7 @@
           </picture>
         </a>
 
-        <button class="main-nav__toggle main-nav__toggle--off" type="button" aria-label="Меню"></button>
+        <button class="main-nav__toggle main-nav__toggle--off" id="toggle-button" type="button" aria-label="Меню"></button>
       </div>
 
       <ul class="main-nav__site-list site-navigation">
@@ -212,7 +212,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__content-wrapper content-wrapper">
-      <a class="page-footer__logo footer-logo" aria-label="Мишка">
+      <a class="page-footer__logo footer-logo" href="index.html" aria-label="Мишка">
         <svg class="footer-logo__image" width="102" height="34">
           <use xlink:href="img/symbols.svg#logo-footer"></use>
         </svg>
