--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           </picture>
         </a>
 
-        <button class="main-nav__toggle main-nav__toggle--off" type="button" aria-label="Меню"></button>
+        <button class="main-nav__toggle main-nav__toggle--off" id="toggle-button" type="button" aria-label="Меню"></button>
       </div>
 
       <ul class="main-nav__site-list site-navigation">
@@ -271,6 +271,7 @@
   <script src="js/picturefill.min.js"></script>
   <script src="js/polyfill.min.js"></script>
   <script src="js/index.min.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&onload=init" async></script>
 </body>
 
 </html>
